Added partial JWT Auth security, endpoints should now be configured for testing
